# shorts-maker

./: .gitignore  LICENSE  QUICKSTART.md  README.md  REQUIREMENTS.md  config.yaml  pyproject.toml  requirements.txt  setup.sh  test_apply_lut.py
luts/: README.md  cinematic.cube  cool.cube  test_warm.cube
src/: cli.py
src/core/: color_grader.py  music_manager.py  scene_detector.py  video_processor.py
src/utils/: config.py  database.py  lut_loader.py  progress.py  stabilizer.py
